Fixed text from overflowing from div and added scrollbar in grandchild

--- a/public/style.css
+++ b/public/style.css
@@ -87,16 +87,18 @@
 		    border-color: red; 
 		    border:solid; 
 		    border-width: 1px; 
-		    height: 500px; 
+		    height: 90vh;
 		    background-color: white;
+
 		}
 
 		.display-box{
 		    border-color: white; 
 		    border:solid; 
 		    border-width: 1px; 
-		    height: 500px; 
+		    height: 90vh; 
 		    background-color: white;
+		    
 		}
 
 		.profile-main{
